<resources>
    <string name="app_name">Cards</string>
    <string name="app_decks">Decks</string>
    <string name="app_review">Review Cards</string>
    <string name="app_statistics">Statistics</string>
    <string name="app_about">About</string>
    <string name="app_tutorial">Tutorial</string>


    <string name="card_answer_btn">check answer</string>
    <string name="card_back_btn">back</string>
    <string name="card_question_text">Question</string>
    <string name="card_deck_text">Deck Name</string>
    <string name="card_answer_text">Answer</string>
    <string name="card_date_text">Date</string>
    <string name="card_easiness_text">Easiness</string>
    <string name="card_easiness_value">%.2f</string>
    <string name="card_repetitions_text">Repetitions</string>
    <string name="card_interval_text">Interval</string>
    <string name="card_nextPracticeDay_text">Next practice day</string>
    <string name="card_help_btn">help</string>
    <string name="card_easy_btn">easy</string>
    <string name="card_doubt_btn">doubt</string>
    <string name="card_hard_btn">hard</string>
    <string name="empty_card_list">No more cards to review</string>
    <string name="due_cards_format">%d cards remaining</string>
    <string name="subtitle_text">Tap to study</string>
    <string name="expand_more_info">See more</string>
    <string name="expand_less_info">See less</string>
    <string name="card_add_info">Create a Card</string>
    <string name="deck_add_info">Create a Deck</string>

    <string name="card_create_question_hint">Write the question text</string>
    <string name="card_create_answer_hint">Write the answer text</string>
    <string name="deck_create_hint">Write the deck name</string>
    <string name="card_accept">Accept</string>
    <string name="card_cancel">Cancel</string>
    <string name="number_cards">cards</string>
    <string name="number_cards_to_study">cards to study</string>
    <string name="app_decks_to_study">Decks to Study</string>

    <string name="stats_next_practice">Next Practices</string>
    <string name="stats_eassines_practice">Practice Quality</string>
    <string name="descripction_about1">An spaced repetition flashcard app is a tool that uses a learning method based on spaced repetition to help users memorize information and improve their long-term retention..</string>
    <string name="descripction_about2">The user can create their own study cards or use the cards already available in the application. Then, the application presents the cards to the user in a random order and asks them to recall the answer. After the user responds, the application shows the correct answer and allows them to evaluate their response, rating it to be presented again in the future.</string>
    <string name="descripction_about3">This application has been developed by Javier Fraile Iglesias for academic purposes for the subject of Mobile Device Applications Development in the year 2023.</string>

    <string name="descripction_tutorial1">Decks -> Section where decks and cards within each deck can be edited, added, and deleted in order to prepare the cards for their reviews. In this section, additional information about each card can also be viewed.</string>
    <string name="descripction_tutorial2">Study -> This section shows, for each deck, the cards available to review at any given moment, and allows for the start of a review of all the cards in each deck, updating in real time.</string>
    <string name="descripction_tutorial3">Statistics -> Allows for the observation of, for each deck or by default globally, statistics about the difficulty of the decks, depending on the selected options, and the upcoming review days..</string>
    <string name="settings_menu_title">settings</string>
    <string name="logout_menu_title" translatable="false">log out</string>

    <string name="board_summary_off">Show Board</string>
    <string name="board_summary_on">Hide Board</string>
    <string name="board_title">Board</string>
    <string name="max_number_cards">Maximum number of cards</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_active_login">Authentication Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>


</resources>