<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="card"
            type="es.uam.eps.dadm.cards.card.Card" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".CardEditFragment">

        <TextView
            android:id="@+id/edit_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:text="@{card.date.substring(0, 10)}"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_item_question_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_margin="20dp"
            android:text="@string/card_question_text"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_item_date" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_item_question"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/card_create_question_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_item_question_">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_item_question_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{card.question}" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/edit_item_answer_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/card_answer_text"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_item_question" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_item_answer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/card_create_answer_hint"
            app:layout_constraintTop_toBottomOf="@+id/edit_item_answer_"
            tools:layout_editor_absoluteX="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_item_answer_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{card.answer}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TableRow
            android:id="@+id/cards_answer_response_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_item_answer">

            <Button
                android:id="@+id/card_accept"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/card_accept"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/card_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/card_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>