<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="es.uam.eps.dadm.cards.card.StudyViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyFragment">

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@{@string/due_cards_format(viewModel.nDUeCards)}"
        android:textColor="@color/gray"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_card_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_card_list"
        android:visibility="@{viewModel.card == null ? View.VISIBLE : View.INVISIBLE}"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/card_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@{viewModel.card.question}"
        android:visibility="@{viewModel.card != null ? View.VISIBLE : View.INVISIBLE}"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pregunta" />

    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:background="@android:color/darker_gray"
        android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
        app:layout_constraintBottom_toTopOf="@+id/card_answer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/card_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.card.answer}"
        android:textColor="@color/gray"
        android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_question_text"
        tools:text="Respuesta a la pregunta" />


    <TableRow
        android:id="@+id/cards_answer_response_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/card_hard_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/red"
            android:text="@string/card_hard_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/card_doubt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/card_doubt_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/card_easy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/card_easy_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </TableRow>


    <Button
        android:id="@+id/card_answer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/card_answer_btn"
        android:textAllCaps="false"
        android:visibility="@{(viewModel.card != null &amp;&amp; viewModel.card.answered == false)? View.VISIBLE : View.INVISIBLE}"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>