<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="card"
            type="es.uam.eps.dadm.cards.card.Card" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_box"
        android:elevation="10dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/list_item_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@{card.question}"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/list_delete_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_item_question" />


        <ImageView
            android:id="@+id/list_item_expand_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/expand_more_info"
            android:src="@drawable/expand_more"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_question"
            app:layout_constraintEnd_toStartOf="@+id/list_delete_card"
            app:layout_constraintTop_toTopOf="@+id/list_item_question" />

        <ImageView
            android:id="@+id/list_item_expand_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/expand_less_info"
            android:src="@drawable/expand_less"
            android:visibility="gone"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_question"
            app:layout_constraintEnd_toStartOf="@+id/list_delete_card"
            app:layout_constraintTop_toTopOf="@+id/list_item_question" />

        <TextView
            android:id="@+id/list_item_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{card.answer}"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_question" />

        <TextView
            android:id="@+id/list_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{card.nextPracticeDate.substring(0, 10)}"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_item_answer" />


        <TextView
            android:id="@+id/list_item_easiness_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/card_easiness_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_answer" />

        <TextView
            android:id="@+id/list_item_easiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{card.quality()}'
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_easiness_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_item_easiness_tag" />


        <TextView
            android:id="@+id/list_item_repetitions_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_repetitions_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_easiness_tag" />

        <TextView
            android:id="@+id/list_item_repetitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{String.format("%d", card.repeats)}'
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_repetitions_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_item_repetitions_tag" />

        <TextView
            android:id="@+id/list_item_nextPractice_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_date_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_repetitions_tag" />

        <TextView
            android:id="@+id/list_item_nextPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{card.date.substring(0, 10)}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_nextPractice_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_item_nextPractice_tag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>